fixed footer, jumping columns for mobile resize

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -146,6 +146,7 @@ $menu-label-color: $white-ter
     vertical-align: middle
     display: inline
 
+
 // blog roll
 .blog-list-item.is-featured
   background-color: #0F4C5C33;
@@ -194,6 +195,10 @@ $menu-label-color: $white-ter
   .blog-list-item .featured-thumbnail
     text-align: center;
     max-width: 70%;
+    max-width: 12rem;
     margin: 0 0 1em;
   .project-section columns
     display: flex;
+
+.footer-social
+  flex-direction: column
